Updated landing page, about page, and technology page

--- a/src/assets/scss/layout/_bg.scss
+++ b/src/assets/scss/layout/_bg.scss
@@ -48,7 +48,7 @@
         'filter #{_duration(article)} ease-in-out'
       )
     );
-    background-image: url('../../images/yosemite.jpg');
+    background-image: url('../../images/landing-background.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
