--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -103,3 +103,51 @@
 			}
 		}
 	}
+
+	.resume {
+		@include vendor('appearance', 'none');
+		@include vendor('transition', 'background-color #{_duration(transition)} ease-in-out, color #{_duration(transition)} ease-in-out');
+		background-color: transparent;
+		min-width: 7.5rem;
+		display: inline-block;
+		font-size: 0.8rem;
+		height: _size(element-height);
+		letter-spacing: _font(letter-spacing);
+		line-height: _size(element-height);
+		text-align: center;
+		text-decoration: none;
+		text-transform: uppercase;
+
+		&:hover {
+			background-color: _palette(border-bg);
+		}
+
+		&:active {
+			background-color: _palette(border-bg-alt);
+		}
+
+		&.icon {
+			&:before {
+				margin-right: 0.5em;
+			}
+		}
+
+		&.fit {
+			display: block;
+			margin: 0 0 (_size(element-margin) * 0.5) 0;
+			width: 100%;
+		}
+
+		&.special {
+			background-color: _palette(fg-bold);
+			color: _palette(bg) !important;
+			font-weight: _font(weight-bold);
+		}
+
+		&.disabled,
+		&:disabled {
+			@include vendor('pointer-events', 'none');
+			cursor: default;
+			opacity: 0.25;
+		}
+	}
